# SDLC_Updated

./: .gitignore  README.md
.devcontainer/: Dockerfile  README.md  devcontainer.json
Agentic_AI/: agentic_AI_App.py  agentic_ai_setup.py  requirements_agentic_ai.txt
Backend_GCP/: Gemini_AI.py  JIRA_API.py  JIRA_defect_tags  README  Sagemaker_gptJ.py  VertexAI.py  fine_tune.jsonl  fine_tune_readme  finetuning_gpt3.5.py  log_analysis.py  mistral.py  test.py  train_mistral.json
ForgeApp/: .gitignore  README.md  ai_user_stories_output.xlsx  generate_stories_excel.py  manifest.yml  package-lock.json  package.json  requirements.txt  story_prompt.txt
ForgeApp/ai-pm--v2/: manifest.yml  package-lock.json
ForgeApp/ai-pm--v2/src/frontend/: index.jsx
ForgeApp/ai-pm-v2/: README.md  manifest.yml  package.json
ForgeApp/ai-pm-v2/src/frontend/: config.jsx  index.jsx
ForgeApp/ai-pm-v2/src/resolvers/: index.js
ForgeApp/data/: prjoectRequirementsData.txt
ForgeApp/scripts/: excel_formatter.py  generate_stories_excel.py
ForgeApp/src/: index.js
ForgeApp/src/forgeUserStoryGeneration/: index.jsx  storygen-resolver.js
ForgeApp/src/ui/: StoryGenForm.jsx  TableOutput.jsx
SDLC/: Dockerfile  README.md  app.py  app1.py  app_gcp_e2e.py  app_mistral.py  pyproject.toml
TestCaseCreation/: acceptance_criterias.txt  testCaseCreation.py
